--- a/text.html
+++ b/text.html
@@ -6,12 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Simma Paparao</h1>
-    <h1>Simma Paparao and pavan koniki</h1>
-    <h1>Simma Paparao and pavan koniki</h1>
-    <h1>Simma Paparao and pavan koniki and my akhil bro</h1>
-    <h1>Simma Paparao and pavan koniki</h1>
-    <h1>Simma Paparao and pavan koniki</h1>
-    <h1>Simma Paparao and pavan koniki and my akhil bro</h1>
+    <h1>Full requst</h1>
 </body>
 </html>
